image not showing problem solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
 
 
 body::after {
-    content: url(/images/single-coffee-beans-removebg-preview.png);
+    content: url(../images/single-coffee-beans-removebg-preview.png);
     position: absolute;
     z-index: -999;
     opacity: 30%;
@@ -28,7 +28,7 @@ body::after {
     max-width: 85%;
     height: 700px;
     margin: 50px auto;
-    background-image: url(/images/Coffee-bg-final.gif);
+    background-image: url(../images/Coffee-bg-final.gif);
     background-size: cover;
 }
 
@@ -163,7 +163,7 @@ body::after {
 .checkout {
     width: 85%;
     background-color: #e2d9c8;
-    background-image: url(/images/coffee-bg-checkout.png);
+    background-image: url(../images/coffee-bg-checkout.png);
     background-size: auto;
     background-repeat: no-repeat;
     height: 300px;
@@ -249,7 +249,7 @@ body::after {
 .reviewer-img1 {
     width: 60px;
     height: 60px;
-    background-image: url(/images/obaidullah.jpg);
+    background-image: url(../images/obaidullah.jpg);
     background-size: cover;
     border-radius: 100px;
 }
@@ -257,7 +257,7 @@ body::after {
 .reviewer-img2 {
     width: 60px;
     height: 60px;
-    background-image: url(/images/yeasin.jpg);
+    background-image: url(../images/yeasin.jpg);
     background-size: cover;
     border-radius: 100px;
 }
@@ -265,7 +265,7 @@ body::after {
 .reviewer-img3 {
     width: 60px;
     height: 60px;
-    background-image: url(/images/adnan.jpg);
+    background-image: url(../images/adnan.jpg);
     background-size: cover;
     border-radius: 100px;
 }
@@ -294,7 +294,7 @@ body::after {
 .subscribe-container {
     width: 85%;
     height: 300px;
-    background-image: url(/images/coffee-bg-checkout.png);
+    background-image: url(../images/coffee-bg-checkout.png);
     background-size: auto;
     background-color: #e2d9c8;
     margin: 0 auto;
